--- a/templates/orders/partials/forms/payment_toggle.html
+++ b/templates/orders/partials/forms/payment_toggle.html
@@ -8,6 +8,7 @@
 
     <label class="checkbox-inline">
         <input type="checkbox"
+            {% if order.unique_reference == request.GET.oid %}class="pay-setter"{% endif %}
             data-url="{% url 'orders.confirm_payment' order.pk %}"
             data-pk="{{order.pk}}"
             data-offstyle="danger"
