--- a/templates/orders/partials/modals/success_order.html
+++ b/templates/orders/partials/modals/success_order.html
@@ -42,7 +42,8 @@
                     {% trans 'Go to Robokassa' %}
                 </a>
             {% else %}
-                <a href="{% url 'orders.orders_list' %}?oid={{ order.pk }}" class="btn btn-success">
+                <a href="{% url 'orders.orders_list' %}?oid={{ order.unique_reference }}"
+                   class="btn btn-success">
                     {%  if order.is_buy %}
                         {% trans 'Get your bitcoins' %}
                     {% else %}
