--- a/templates/orders/partials/order_row_mobile.html
+++ b/templates/orders/partials/order_row_mobile.html
@@ -18,7 +18,8 @@
     </div>
 </a>
 
-<div id="body-{{ order.unique_reference}}" class="panel-body panel-collapse collapse">
+<div id="body-{{ order.unique_reference}}"
+     class="panel-body panel-collapse collapse">
     <div class="mobile-row">
       <div class = "headers-mobile header-text">
         {% trans "Reference" %}
