--- a/templates/orders/partials/orders_desktop.html
+++ b/templates/orders/partials/orders_desktop.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class="table-responsive visible-md visible-lg">
+<div class="table-responsive visible-md visible-lg orders-root">
   <table class=" table-hover table-condensed col-lg-12">
     <tr class="table-order">
         <th >{% trans "Type" %}</th>
