--- a/templates/orders/partials/orders_mobile.html
+++ b/templates/orders/partials/orders_mobile.html
@@ -1,5 +1,7 @@
-<div  class="panel panel-default visible-sm visible-xs">
+<div  class="orders-root panel panel-default visible-sm visible-xs">
   {% for order in orders %}
-      {% include 'orders/partials/order_row_mobile.html' %}
+      <div class="order-row">
+              {% include 'orders/partials/order_row_mobile.html' %}
+      </div>
   {% endfor %}
 </div>
