--- a/templates/orders/partials/steps/step_confirmation.html
+++ b/templates/orders/partials/steps/step_confirmation.html
@@ -1,7 +1,7 @@
 {% extends 'orders/partials/steps/step_base.html' %}
 {% load i18n %}
 {% block step_content %}
-    <div class="row step-confirm panel">
+    <div class="row step-confirm">
         <h3>{% trans "Your Order" %}</h3>
         <div class="col-sm-12 center confirm-order">
             <div class="col-sm-5 col-md-5">
@@ -22,7 +22,6 @@
             <div class="payline">  </div>
             </div>
 
-
             <div class="col-lg-12 confirmation-elem">
                 <span class="payment-preference-confirm"></span>
             </div>
@@ -36,7 +35,8 @@
         <div class="col-lg-12"> 
             <input type="hidden" name="type" value="1" class="trade-type">
             <input type="hidden" name="payment-option" value="" class="payment-option">
-            <input type="hidden" name="payment-preference" value="" class="payment-preference-actual">            <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
+            <input type="hidden" name="payment-preference" value="" class="payment-preference-actual">
+            <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
             <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
             <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
             <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
