--- a/templates/orders/partials/order_row_desktop.html
+++ b/templates/orders/partials/order_row_desktop.html
@@ -12,7 +12,7 @@
             {% endif %}
         </td>
         <td>{{ order.created_on |date:"D d M"}}</td>
-        <td>{{ order.unique_reference|upper }}</td>
+        <td>{{ order.unique_reference }}</td>
         <td>{{ order.pair.name }}</td>
         <td>{{ order.amount_quote | floatformat:2}}</td>
         <td>{{ order.amount_base |floatformat}}</td>
