--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -23,6 +23,10 @@
                             <strong>{{order.payment_preference.bic}}</strong>
                         </p>
                         <p><small>
+                            {% trans 'Beneficiary: '%}
+                            <strong>{{order.payment_preference.beneficiary}}</strong>
+                        </small></p>
+                        <p><small>
                             {% trans 'Bank Name: '%}
                             <strong>{{order.payment_preference.name}}</strong>
                         </small></p>
