--- a/templates/payments/partials/modals/payment_options.html
+++ b/templates/payments/partials/modals/payment_options.html
@@ -31,8 +31,8 @@
         {% trans 'Bank'%}
     </div>
     {% if type == 'buy' %}
-        {% include 'payments/partials/modals/card.html' with card_type='alfa-bank' label='Alfa-Bank' icon='icons/small/alfabank.png' card=cards.alfa %}
-        {% include 'payments/partials/modals/card.html' with card_type='sbernank' label='Sberbank' icon='icons/small/sber.png' card=cards.sber %}
+        {% include 'payments/partials/modals/card.html' with card_type='alfa bank' label='Alfa-Bank' icon='icons/small/alfabank.png' card=cards.alfa %}
+        {% include 'payments/partials/modals/card.html' with card_type='sberbank' label='Sberbank' icon='icons/small/sber.png' card=cards.sber %}
         {% include 'payments/partials/modals/card.html' with card_type='sepa' label='Sepa' icon='icons/small/sepa.png'  card=cards.alfa %}
         {% include 'payments/partials/modals/card.html' with card_type='swift' label='Swift' icon='icons/small/swift.png' card=cards.alfa %}
     {% else %}
