--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -8,6 +8,7 @@
         <h1>{% trans 'Order placed successfully' %}</h1>
             <div class="row">
                 <div class="col col xs-12"></div>
+
                 {% trans 'Please make payment to the following' %}
                 {{ order.payment_preference.payment_method.name }}
             </div>
@@ -137,6 +138,13 @@
           {% block terms %}
               <div class="exchange-terms">
                   <div class="row text-left">
+                      {% if order.payment_preference.comment %}
+                          <div class="col col-xs-12 text-let">
+                              <label>
+                                  * {{ order.payment_preference.comment }}
+                              </label>
+                          </div>
+                      {% endif %}
                     <div class="col col-xs-12 text-let">
                        <label>
                            * {% trans 'Please notice that you must pay until ' %}
