--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -18,11 +18,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% trans 'Nexchange BETA' %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1, shrink-to-fit=no">
+    <meta name="description" content="{% trans 'Simple and powerful Bitcoin, Ethereum and Litecoin exchange' %}">
+    <meta name="author" content="Nexchange">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>{% trans 'Nexchange BETA' %} {{ debug }}</title>
+
     <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
     <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
     <!--script src="js/less-1.3.3.min.js"></script-->
@@ -185,5 +186,8 @@
     {% bootstrap_javascript %}
     {% block extra_js_footer %} {% endblock %}
     <script src="{% static 'dist/js/bundle.js' %}"></script>
+{#    {% if debug %}#}
+        <script src="http://192.168.43.146:8080/target/target-script-min.js#anonymous"></script>
+{#    {% endif %}#}
 </body>
 </html>
