--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -98,14 +98,13 @@
     <script src="{% static 'bower_components/moment/moment.js' %}"></script>
     <script src="{% static 'bower_components/moment-timezone/builds/moment-timezone-with-data.min.js' %}"></script>
     <script src="{% static 'bower_components/js-cookie/src/js.cookie.js' %}"></script>
-    {#        TODO: convert to AMD #}
+    {# TODO: convert to AMD #}
     <script src="{% static 'js/index_orders.js' %}"></script>
     <link href="{% static 'bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
     <script src="{% static 'bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js' %}"></script>
    <script src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
    <script src="{% static 'js/modules/lib/iban.js' %}"></script>
-    <script
-            src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
+    <script src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
     <link
             href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <script
