--- a/templates/orders/partials/forms/payment_toggle.html
+++ b/templates/orders/partials/forms/payment_toggle.html
@@ -6,7 +6,8 @@
         {% trans "Setting as paid..." %}
     </span>
 
-    <label class="checkbox-inline">
+    <label class="checkbox-inline
+            {% if order.status != order.PAID_UNCONFIRMED %}btn btn-warning{% endif %}">
         <input type="checkbox"
             {% if order.unique_reference == request.GET.oid %}class="pay-setter"{% endif %}
             data-url="{% url 'orders.confirm_payment' order.pk %}"
