--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,20 +1,5 @@
-<!DOCTYPE HTML>
-
-{# Load the tag library #}
-{% load bootstrap3 %}
-{% load staticfiles %}
-{% load i18n %}
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-{# Load CSS and JavaScript #}
-{% bootstrap_css %}
-{% block css %}
-{% endblock %}
-{# Display django.contrib.messages as Bootstrap alerts #}
-{% bootstrap_messages %}
-
-<html lang="en">
+<!DOCTYPE HTML> {# Load the tag library #} {% load bootstrap3 %} {% load staticfiles %} {% load i18n %}
+<html lang="{{COUNTRY_CODE}}">
 
 <head>
     <meta charset="utf-8">
@@ -24,167 +9,44 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>{% trans 'Nexchange BETA' %} {{ debug }}</title>
 
-    <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
-    <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
-    <!--script src="js/less-1.3.3.min.js"></script-->
-    <!--append ‘#!watch’ to the browser URL, then refresh the page.
-    -->
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-        <script src="js/html5shiv.js"></script>
-    <![endif]-->
-
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="{% static 'images/icon.png'%}">
-    <!-- 	-->
-    <link rel="stylesheet" href="{% static 'css/overrides_old.css' %}">
-    <link rel="stylesheet" href="{% static 'css/overrides.css' %}">
-    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
+
     <script type="text/javascript">
         // TODO: which is the best way to translate JS messages?
         var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}";
         var UNKNOW_ERROR = HTTP_500_MSG;
     </script>
 
-    {% if GOOGLE_ANALYTICS_PROPERTY_ID %}
-        {% include "core/analitycs/ga.html" %}
-    {% endif %}
-    {% if YANDEX_METRICA_ID %}
-        {% include "core/analitycs/metrica.html" %}
-    {% endif %}
-
+    {% if GOOGLE_ANALYTICS_PROPERTY_ID %} {% include "core/analitycs/ga.html" %} {% endif %} {% if YANDEX_METRICA_ID %} {% include "core/analitycs/metrica.html" %} {% endif %}
 
 </head>
+
 <body>
-   <div class="wrapper">
-	  <div class="content">
-        <div class="container main">
-            <div class="menuContainer">
-                {% include 'core/partials/menu.html' %}
+    <div class="wrapper">
+        <div class="content">
+            <div class="container main">
+                <div class="menuContainer">
+                    {% include 'core/partials/menu.html' %}
+                </div>
+                {% block main %} {% endblock %}
+
+                <div class="cms_container">
+                    {% block cms_static %} {% endblock %}
+                </div>
             </div>
-                {% block main %}
-                {% endblock %}
-
-        <div class="cms_container" >
-            {% block cms_static %}
-            {% endblock %}
         </div>
-      </div>
+        {% block content %} {% endblock content %} {% block footer %} {% endblock %}
     </div>
-        {% block content %}
-        {% endblock content %}
+    {% include 'core/partials/supported_payments.html' %} {% include 'core/partials/popular_faq.html' %} {% include 'core/partials/seo_footer.html' %}
+
+    <link rel="stylesheet" href="{% static 'bundles/bundle.css' %}">
+    <script type="text/javascript" src="/en/jsi18n/"></script>
+    <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+    <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+    <script type="text/javascript" src="{% static 'bundles/bundle.js' %}"></script>
 
 
-        {% block footer %}
-        {% endblock %}
- </div>
-   {% include 'core/partials/supported_payments.html' %}
-    {% include 'core/partials/popular_faq.html' %}
-    {% include 'core/partials/seo_footer.html' %}
-   
-    <script type="text/javascript" src="{% url 'nexchange.javascript_catalog' %}"></script>
-    <script src="https://code.jquery.com/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
-          integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
-          crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/9a25f329b7.js"></script>
-    <script src="{% static 'js/django_jquery_csrf_setup.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="{% static 'bower_components/moment/moment.js' %}"></script>
-    <script src="{% static 'bower_components/moment-timezone/builds/moment-timezone-with-data.min.js' %}"></script>
-    <script src="{% static 'bower_components/js-cookie/src/js.cookie.js' %}"></script>
-    {# TODO: convert to AMD #}
-    <script src="{% static 'js/index_orders.js' %}"></script>
-    <link href="{% static 'bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
-    <script src="{% static 'bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js' %}"></script>
-   <script src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
-   <script src="{% static 'js/modules/lib/iban.js' %}"></script>
-    <script src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
-    <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
-    <script
-         src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.full.min.js"></script>
-
-   <link rel="stylesheet" href="{% static 'bower_components/nprogress/nprogress.css' %}">
-   {% include 'session_security/all.html' %}
-    <script>
-        window.getLockOutText = function (data) {
-            if (!data.responseJSON.cooloff_time) {
-                return false;
-            }
-            var refreshTimtout = 5,
-                countDownUnit = 1;
-
-            setTimeout(
-                function () {
-                    window.location.reload();
-                }, refreshTimtout * 1000
-            )
-            
-            setInterval(function () {
-                var countDown = $("#refresh_count"),
-                    current = parseInt(countDown.text());
-                countDown.text(current - 1)
-                    countDown.val()
-            }, countDownUnit * 1000);
-
-            var formattedTime = data
-                    .responseJSON
-                    .cooloff_time
-                    .replace("PT","")
-                    .replace("H",":")
-                    .replace("M","")
-                    .replace("S",""),
-                errorMsg = gettext('You were locked out, please try again in '),
-                refreshMsg = 'Refreshing in <span id="refresh_count">' + 5 + '</span>',
-                completeMsg = errorMsg +
-                formattedTime + ' ' +
-                gettext('minutes') + '<br>' +
-                refreshMsg;
-                return completeMsg;
-         };
-
-        window.countryCode = '{{COUNTRY_CODE}}';
-        window.recaptchaSitekey = '{{ RECAPTCHA_SITEKEY }}'
-        $( document ).ready(function() {
-            Cookies.set("USER_TZ", moment.tz.guess());
-            var userLang= Cookies.get("django_language");
-            if (!userLang)  {
-              userLang = navigator.language || navigator.userLanguage;
-              Cookies.set("django_language", userLang.substring(0,2).toLowerCase());
-            }
-        });
-    </script>
-    <script>
-    // toastr settings
-    toastr.options = {
-        "closeButton": false,
-        "debug": false,
-        "newestOnTop": false,
-        "progressBar": false,
-        "positionClass": "toast-bottom-right",
-        "preventDuplicates": false,
-        "onclick": null,
-        "showDuration": "300",
-        "hideDuration": "1000",
-        "timeOut": "5000",
-        "extendedTimeOut": "1000",
-        "showEasing": "swing",
-        "hideEasing": "linear",
-        "showMethod": "fadeIn",
-        "hideMethod": "fadeOut"
-        }
-    </script>
-
-    <script src="{% static 'js/footer.js' %}"></script>    
-    {% bootstrap_javascript %}
-    {% block extra_js_footer %} {% endblock %}
-    <script src="{% static 'dist/js/bundle.js' %}"></script>
-    <script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=62931500"></script>
 </body>
+
 </html>
