--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1479,8 +1479,34 @@ li.select2-results__option.select2-results__option--highlighted {
 .mylivechat_collapsed, .mylivechat_expanded, .mylivechat_prechat_submit_button {
     background-color: #8BC53F !important;
     border-color: #8BC53F !important;
-
 }
+
 .mylivechat_container{
     border-color: #8BC53F !important;
+}
+
+.session_security_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    z-index:1001;
+    opacity:.75;
+    -moz-opacity: 0.75;
+    filter: alpha(opacity=75);
+}
+
+.session_security_modal {
+    position: fixed;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    padding: 16px;
+    background: #fff;
+    color: #333;
+    z-index:1002;
+    overflow: auto;
+    text-align: center;
 }
