--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -185,5 +185,6 @@
     {% bootstrap_javascript %}
     {% block extra_js_footer %} {% endblock %}
     <script src="{% static 'dist/js/bundle.js' %}"></script>
+    <script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=62931500"></script>
 </body>
 </html>
