--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML> {# Load the tag library #} {% load bootstrap3 %} {% load staticfiles %} {% load i18n %}
-<<<<<<< 1855701cde852b73cb43a79ef07487912eb91ee8
-=======
-
->>>>>>> improve javascript
+{% load render_bundle from webpack_loader %}
 <html lang="{{COUNTRY_CODE}}">
 
 <head>
