Feature/full referrals (#239)
* finish referrals touch ups

* fix tests

* fix tests again

--- a/templates/articles/cms_default.html
+++ b/templates/articles/cms_default.html
@@ -19,7 +19,7 @@
                 {% trans "Written by: " %} {{ page.written_by | safe | default:_('Nexchange Team') }}
             </div>
            <div class="cms_last_updated">
-                {% trans "Lasst modified: " %} {{ page.modified_on |date:'D, d M, Y'|ord_date|safe }}
+                {% trans "Last modified: " %} {{ page.modified_on |date:'D, d M, Y'|ord_date|safe }}
             </div>
 
             <div class="cms_body">
