--- a/templates/orders/partials/completed_indciator.html
+++ b/templates/orders/partials/completed_indciator.html
@@ -1,4 +1,4 @@
-<span class="completed-indicator">
+<span class="completed-indicator order-{{ order.pk }}">
     {% if order.status == order.COMPLETED %}
         <span class="fa fa-check fa-1"></span>
     {% else %}
