--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -44,7 +44,13 @@
     <script type="text/javascript" src="/en/jsi18n/"></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+    <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script type="text/javascript"
+            src="https://code.highcharts.com/modules/exporting.js"></script>
+
     <script type="text/javascript" src="{% static 'bundles/bundle.js' %}"></script>
+
 
 </body>
 
