WIP: unfinishe currency select selenium test

--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -62,9 +62,7 @@
                     <select name='currency_to'
                             class='currency-select currency-to price_box_selectbox_cont_selectbox classic'>
                        {% for code in base_currencies %}
-                           <option value="{{ code }}">
-                               {{ code }}
-                           </option>
+                           <option value="{{ code }}">{{ code }}</option>
                        {% endfor %}
                      </select>
                 </div>
