add native icons

--- a/templates/core/partials/breadcrumbs.html
+++ b/templates/core/partials/breadcrumbs.html
@@ -8,7 +8,7 @@
                         class="btn btn-default btn-circle disableClick"
                         data-toggle="tab">
                     <span class="step-icon-container">
-                        <i class="fa fa-bar-chart step-icon"></i>
+                        <img class="step-icon" src="{% static 'images/graph.png' %}" alt="">
                     </span>
                 </button>
                 <p>{% trans "Order" %}</p>
@@ -20,7 +20,7 @@
                 <button type="button"
                         class="btn btn-default btn-circle btn-register disableClick">
                 <span class="step-icon-container">
-                    <i class="fa fa-mobile step-icon"></i>
+                    <img class="step-icon" src="{% static 'images/phone.png' %}" alt="">
                 </span>
                 </button>
                 <p>{% trans "Login" %}</p>
@@ -32,7 +32,7 @@
                 <button type="button"
                         class="btn btn-default btn-circle btn-register disableClick">
                     <span class="step-icon-container">
-                        <i class="fa fa-bitcoin step-icon"></i>
+                        <img class="step-icon" src="{% static 'images/coin.png' %}" alt="">
                     </span>
                 </button>
                 <p>{% trans 'Confirm' %}</p>
