--- a/templates/payments/partials/modals/card.html
+++ b/templates/payments/partials/modals/card.html
@@ -5,7 +5,7 @@
          data-type="{{ card_type }}"
          data-label="{{ label }}"
          data-identifier="{{ card.identifier }}">
-        <div class="col col-xs-12 payment-trigger-image">
+        <div class="col col-sm-12 payment-trigger-image">
                 <span class="helper"></span>
                 <img src="{% static icon %}"
                      alt="{% trans label %}"
