--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,6 +275,9 @@
 
 textarea, input, select { outline: none !important; }
 
+.highcharts-background {
+    background-color: #f3f3f3 !important;
+}
 #container-graph {
     width: 100%;
     height: 250px; margin: 0 auto;
@@ -665,7 +668,7 @@ body .price_box_ticker .trigger-sell, body .price_box_next_cont .sell-go{
 {
 
 .payment-trigger-image span.helper {
-    display: none;
+    display: none !important;
 }
 .payment-trigger-image .payment-method-icon {
     max-width: 135px;
@@ -696,6 +699,10 @@ div.payment-label {
 
 @media screen and (max-width:767px)
 {
+
+.step-icon {
+    padding-bottom: 6px;
+}
 .top_panel{text-align:center;}
 
 .topright_panel{text-align:center;}
@@ -808,7 +815,9 @@ div.payment-label {
    }
 
    .menu1 .exchange-sign {
-       margin-top: 20px;
+        display: inline-block;
+        text-align: center !important;
+        margin: 20px -10px !important;
    }
 
     body .menu2 label {
@@ -1509,4 +1518,10 @@ li.select2-results__option.select2-results__option--highlighted {
     z-index:1002;
     overflow: auto;
     text-align: center;
+}
+
+.step-icon {
+    max-height: 100%;
+    max-width: 100%;
+    padding: 2px;
 }
