--- a/templates/orders/partials/modals/order_success_sell.html
+++ b/templates/orders/partials/modals/order_success_sell.html
@@ -15,16 +15,16 @@
         </div>
         <div class="row">
             <div class="col col-xs-12">
-                <div class="qrContainer btn btn-success">
-                    <img src="//blockr.io/api/v1/address/Qr/{{ address }}" alt="{{ address }}">
-                </div>
-            </div>
-           <div class="col col-xs-12">
-                <span class="btn btn-success expand" title=
+                <span class="expand" title=
                         "{% trans 'Copy' %}">
                     <i class="fa fa-copy"></i>
                     <strong>{{address}}</strong>
                 </span>
+            </div>
+            <div class="col col-xs-12">
+                <div class="qrContainer">
+                    <img src="https://chart.googleapis.com/chart?cht=qr&chl={{ address }}&choe=UTF-8&chs=250x250" alt="{{ address }}">
+                </div>
             </div>
         </div>
         <div class="row">
