--- a/templates/orders/partials/forms/withdraw_address_widget.html
+++ b/templates/orders/partials/forms/withdraw_address_widget.html
@@ -34,7 +34,7 @@
                 data-placement="top"
                 data-pk="{{order.pk}}"
                 data-url-update="{% url 'orders.update_withdraw_address' order.pk %}"
-                data-url-create="{% url 'accounts.create_withdraw_address' %}">
+                data-url-create="{% url 'accounts.create_withdraw_address' order.pk %}">
                 {{order.withdraw_address.address |default:_("Not Defined")}}
             </span>
             <span class="fa fa-pencil" aria-hidden="true">
