--- a/templates/orders/partials/steps/step_confirmation.html
+++ b/templates/orders/partials/steps/step_confirmation.html
@@ -6,7 +6,7 @@
         <div class="col-sm-12 center confirm-order">
             <div class="col-sm-5 col-md-5">
                 <div class="col-lg-12 confirmation-elem">
-                    <span class="amount btc-amount-confirm"></span> {%  trans "BTC" %}
+                    <span class="amount btc-amount-confirm"></span> <span class="currency_base"></span>
                 </div>
             </div>
             <div class="col-sm-2 col-md-2 confirmation-elem for">
@@ -40,7 +40,7 @@
             <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
             <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
             <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
-            <a href="/" class="btn place-cancel">{% trans "Cancel" %}</a>
+            <a href="/" class="btn place-cancel btn-lg">{% trans "Cancel" %}</a>
         </div>
     </div>
 </div>
