--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -14,8 +14,6 @@
 
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="{% static 'images/icon.png'%}">
-    <link rel="stylesheet" href="{% static 'bundles/bundle.css' %}">
-
     <script type="text/javascript">
         // TODO: which is the best way to translate JS messages?
         var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}";
@@ -23,10 +21,9 @@
     </script>
 
     {% if GOOGLE_ANALYTICS_PROPERTY_ID %} {% include "core/analitycs/ga.html" %} {% endif %} {% if YANDEX_METRICA_ID %} {% include "core/analitycs/metrica.html" %} {% endif %}
-
 </head>
 
-<body>
+<body style="opacity: 0;">
     <div class="wrapper">
         <div class="content">
             <div class="container main">
@@ -45,17 +42,12 @@
     {% include 'core/partials/supported_payments.html' %} {% include 'core/partials/popular_faq.html' %} {% include 'core/partials/seo_footer.html' %}
     <script type="text/javascript" src="/en/jsi18n/"></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-    <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-    <script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
-    <script type="text/javascript"
-            src="https://code.highcharts.com/modules/exporting.js"></script>
     <script>
         window.recaptchaSitekey = '{{ RECAPTCHA_SITEKEY }}';
     </script>
 
+    <link rel="stylesheet" href="{% static 'bundles/bundle.css' %}">
     <script type="text/javascript" src="{% static 'bundles/bundle.js' %}"></script>
-
-
 </body>
 
 </html>
