return None if currency is None

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -23,7 +23,7 @@
     {% if GOOGLE_ANALYTICS_PROPERTY_ID %} {% include "core/analitycs/ga.html" %} {% endif %} {% if YANDEX_METRICA_ID %} {% include "core/analitycs/metrica.html" %} {% endif %}
 </head>
 
-<body>
+    <body style="opacity: 0;">
     <div class="wrapper">
         <div class="content">
             <div class="container main">
