add amount to Deposit QR's (#255)
* add amount to Deposit QR's

* Add names to crypto currencies fixtures, remove backend currency searches parameter name to code

* Fix tests

--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="col col-xs-12">
                     <div class="qrContainer">
-                        <img src="https://chart.googleapis.com/chart?cht=qr&chl={{ address }}&choe=UTF-8&chs=250x250" alt="{{ address }}">
+                        <img src="https://chart.googleapis.com/chart?chs=250x250&chld=L|2&cht=qr&chl={{ order.pair.quote.name }}:{{ address }}?amount={{ order.amount_quote }}">
                     </div>
                 </div>
             </div>
