--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -47,7 +47,7 @@
                     <select name='currency_from'
                             class='currency-select currency-from price_box_selectbox_cont_selectbox classic'>
                         {% for pair in pairs %}
-                            <option value="{{ pair.quote.code }}">{{ pair.quote.name }}</option>
+                            <option value="{{ pair.quote.code }}">{{ pair.quote.code }}</option>
                         {% endfor %}
                     </select>
                 </div>
